# PahinaV2

./: README.md  pahina.db  pyproject.toml
pahina_server/: database.py  main.py  models.py  schemas.py
